--- a/message_board/templates/pages/message_board.html
+++ b/message_board/templates/pages/message_board.html
@@ -9,7 +9,7 @@
 
         <ul>
             {% for item in items %}
-            <li>{{item}}</li>
+            <li>{{ item |safe}}</li>
             {% endfor %}
         </ul>
 
@@ -23,7 +23,7 @@
         </form>
 
         <h2>Clear everything</h2>
-        <form action="/erase" method="POST">
+        <form action="./clear/" method="POST">
             {% csrf_token %}
             <button type="submit" >Clear!</button>
         </form>
