added sensitive data exposure flaw, and reorganised a bit

--- a/message_board_v1/templates/pages/index.html
+++ b/message_board_v1/templates/pages/index.html
@@ -5,7 +5,8 @@
     </head>
 
     <body>
-      <h1>Hello index page</h1>
-      <a href="messages/">Messages</a>
+      <h1>This is message board version 1</h1>
+      <a href="{% url 'messages_v1'%}">Messages</a>
+      <a href="{% url 'register'%}">Register</a>
     </body>
 </html>
