--- a/message_board_v1/templates/pages/index.html
+++ b/message_board_v1/templates/pages/index.html
@@ -8,5 +8,6 @@
       <h1>This is message board version 1</h1>
       <a href="{% url 'messages_v1'%}">Messages</a>
       <a href="{% url 'register'%}">Register</a>
+      <a href="{% url 'login'%}">Login</a>
     </body>
 </html>
