--- a/message_board_v1/templates/registration/login_v1.html
+++ b/message_board_v1/templates/registration/login_v1.html
@@ -4,7 +4,7 @@
     <p> {{ notif }}</p>
 {% endif %}
 
-<form method="post" action="{% url 'login_v1' %}">
+<form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     Username:<input type="text" name="username"><br>
     Password:<input type="text" name="password"><br>
